--- a/TipTap/Module/DetailDiary/DetailDiary.storyboard
+++ b/TipTap/Module/DetailDiary/DetailDiary.storyboard
@@ -52,15 +52,57 @@
                                             <outlet property="prefetchDataSource" destination="b6O-zg-ETS" id="Crs-rA-hI8"/>
                                         </connections>
                                     </collectionView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MyDiary #01" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rjL-D3-yy8">
+                                        <rect key="frame" x="140" y="24" width="53.5" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18`" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ztI-Gw-dYM">
+                                        <rect key="frame" x="21" y="24" width="21.5" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aug 02" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0u-jS-iFa">
+                                        <rect key="frame" x="21" y="43" width="24" height="31.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jzy-a7-yn3">
+                                        <rect key="frame" x="21" y="76.5" width="1" height="97"/>
+                                        <color key="backgroundColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="0.40253631161971831" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="SqN-pt-xwk"/>
+                                            <constraint firstAttribute="height" constant="97" id="gBO-9Q-g6J"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TIPTAP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfE-rE-wvq">
+                                        <rect key="frame" x="0.0" y="510.5" width="41" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="0.40253631161971831" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.99509803921568629" green="0.99019607843137258" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="QU5-4M-fVS" firstAttribute="top" secondItem="mDH-Q0-2Io" secondAttribute="top" constant="50" id="AMf-ox-u2I"/>
                                     <constraint firstAttribute="trailing" secondItem="QU5-4M-fVS" secondAttribute="trailing" id="Aev-ao-WiQ"/>
+                                    <constraint firstItem="rjL-D3-yy8" firstAttribute="top" secondItem="mDH-Q0-2Io" secondAttribute="top" constant="24" id="Fab-8s-PeR"/>
+                                    <constraint firstItem="ztI-Gw-dYM" firstAttribute="top" secondItem="rjL-D3-yy8" secondAttribute="top" id="HQB-Uk-Jyb"/>
+                                    <constraint firstItem="h0u-jS-iFa" firstAttribute="leading" secondItem="ztI-Gw-dYM" secondAttribute="leading" id="N9f-L5-S85"/>
                                     <constraint firstItem="0Nc-k3-dsm" firstAttribute="top" secondItem="QU5-4M-fVS" secondAttribute="bottom" constant="10" id="Ocf-mm-7BZ"/>
                                     <constraint firstItem="0Nc-k3-dsm" firstAttribute="centerX" secondItem="mDH-Q0-2Io" secondAttribute="centerX" id="T2N-Mo-JRE"/>
+                                    <constraint firstItem="sfE-rE-wvq" firstAttribute="leading" secondItem="mDH-Q0-2Io" secondAttribute="leading" id="WxV-aK-EAg"/>
+                                    <constraint firstAttribute="bottom" secondItem="sfE-rE-wvq" secondAttribute="bottom" constant="92" id="aL7-GB-bcU"/>
+                                    <constraint firstItem="Jzy-a7-yn3" firstAttribute="top" secondItem="h0u-jS-iFa" secondAttribute="bottom" constant="2" id="aix-RW-Kj7"/>
                                     <constraint firstAttribute="bottom" secondItem="0Nc-k3-dsm" secondAttribute="bottom" constant="24" id="gyv-dV-Tae"/>
+                                    <constraint firstItem="Jzy-a7-yn3" firstAttribute="leading" secondItem="h0u-jS-iFa" secondAttribute="leading" id="nPp-LY-Eyc"/>
+                                    <constraint firstItem="ztI-Gw-dYM" firstAttribute="leading" secondItem="mDH-Q0-2Io" secondAttribute="leading" constant="21" id="qur-eY-TB8"/>
+                                    <constraint firstItem="rjL-D3-yy8" firstAttribute="centerX" secondItem="mDH-Q0-2Io" secondAttribute="centerX" id="vjQ-AJ-BR5"/>
                                     <constraint firstItem="QU5-4M-fVS" firstAttribute="leading" secondItem="mDH-Q0-2Io" secondAttribute="leading" id="wFY-q7-z5z"/>
+                                    <constraint firstItem="h0u-jS-iFa" firstAttribute="top" secondItem="ztI-Gw-dYM" secondAttribute="bottom" constant="3" id="wOJ-fq-OeJ"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -74,8 +116,8 @@
                         <viewLayoutGuide key="safeArea" id="IC6-Do-ZhK"/>
                     </view>
                     <connections>
+                        <outlet property="brandLabel" destination="sfE-rE-wvq" id="DkA-JX-ozx"/>
                         <outlet property="collectionView" destination="QU5-4M-fVS" id="XNY-TU-eQl"/>
-                        <outlet property="outlineView" destination="mDH-Q0-2Io" id="wfg-Z3-Hl9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RXh-Eo-tyB" userLabel="First Responder" sceneMemberID="firstResponder"/>
