--- a/TipTap/Module/EditDiary/EditDiary.storyboard
+++ b/TipTap/Module/EditDiary/EditDiary.storyboard
@@ -121,6 +121,15 @@
                                     <action selector="pressedCloseButton:" destination="UQu-jj-iLM" eventType="touchUpInside" id="Foq-VD-jUP"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kc9-2R-L8O">
+                                <rect key="frame" x="335" y="20" width="30" height="40"/>
+                                <state key="normal" title="완료">
+                                    <color key="titleColor" red="0.14499090803743775" green="0.14427666711114495" blue="0.14570514896373055" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="submitDiary:" destination="UQu-jj-iLM" eventType="touchUpInside" id="iaZ-Xa-inQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -129,11 +138,14 @@
                             <constraint firstItem="ERn-0g-UpP" firstAttribute="bottom" secondItem="dhI-j2-qDw" secondAttribute="bottom" id="7Oa-PL-QWX"/>
                             <constraint firstItem="fv7-Oi-G3L" firstAttribute="top" secondItem="AI1-w2-QJw" secondAttribute="top" constant="10" id="97r-rE-FA6"/>
                             <constraint firstItem="cqS-3q-plH" firstAttribute="leading" secondItem="dhI-j2-qDw" secondAttribute="leading" constant="20" id="9bL-vo-vwU"/>
+                            <constraint firstItem="dhI-j2-qDw" firstAttribute="trailing" secondItem="kc9-2R-L8O" secondAttribute="trailing" constant="10" id="9dt-nq-AIe"/>
                             <constraint firstItem="Lzk-Ql-zw5" firstAttribute="centerX" secondItem="50A-cX-2w7" secondAttribute="centerX" id="CV1-hZ-Yyv"/>
                             <constraint firstItem="Ltm-d9-wvf" firstAttribute="top" secondItem="dhI-j2-qDw" secondAttribute="top" id="DOL-td-Scl"/>
                             <constraint firstItem="Ltm-d9-wvf" firstAttribute="leading" secondItem="dhI-j2-qDw" secondAttribute="leading" constant="14" id="HCo-wr-n0l"/>
+                            <constraint firstItem="kc9-2R-L8O" firstAttribute="centerY" secondItem="Ltm-d9-wvf" secondAttribute="centerY" id="HxV-qN-SKl"/>
                             <constraint firstItem="Lzk-Ql-zw5" firstAttribute="centerY" secondItem="Ltm-d9-wvf" secondAttribute="centerY" id="PXy-ZE-5dT"/>
                             <constraint firstItem="1Ha-Hl-udO" firstAttribute="top" secondItem="cqS-3q-plH" secondAttribute="bottom" constant="27" id="RhR-28-EeU"/>
+                            <constraint firstItem="kc9-2R-L8O" firstAttribute="top" secondItem="dhI-j2-qDw" secondAttribute="top" id="VJd-RG-aga"/>
                             <constraint firstItem="1Ha-Hl-udO" firstAttribute="leading" secondItem="dhI-j2-qDw" secondAttribute="leading" constant="30" id="cvb-pk-qAr"/>
                             <constraint firstItem="AI1-w2-QJw" firstAttribute="leading" secondItem="dhI-j2-qDw" secondAttribute="leading" constant="30" id="eP1-9X-J5m"/>
                             <constraint firstItem="Zuz-z2-Jpu" firstAttribute="centerX" secondItem="50A-cX-2w7" secondAttribute="centerX" id="hkr-V5-yQi"/>
