--- a/TipTap/Module/MyDiary/Cell/TTMyDiaryNormalCell.xib
+++ b/TipTap/Module/MyDiary/Cell/TTMyDiaryNormalCell.xib
@@ -19,9 +19,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="135.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울특별시 망원동 키오스크" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hVf-Mo-U66">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울특별시 망원동 키오스크" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hVf-Mo-U66">
                         <rect key="frame" x="183" y="55" width="131.5" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -50,7 +50,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aVd-nx-4DB">
-                        <rect key="frame" x="145" y="0.0" width="1" height="135.5"/>
+                        <rect key="frame" x="143" y="0.0" width="1" height="135.5"/>
                         <color key="backgroundColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="0.5" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="1" id="DMp-3O-bk7"/>
@@ -83,6 +83,7 @@
                     <constraint firstItem="hVf-Mo-U66" firstAttribute="leading" secondItem="Ykv-yQ-CXj" secondAttribute="trailing" constant="20" id="G7T-KO-wc6"/>
                     <constraint firstItem="lMc-3T-0Mc" firstAttribute="top" secondItem="hVf-Mo-U66" secondAttribute="bottom" id="J5c-Qq-tzf"/>
                     <constraint firstItem="mCy-ee-PlZ" firstAttribute="leading" secondItem="lMc-3T-0Mc" secondAttribute="leading" id="LI8-pE-aTH"/>
+                    <constraint firstItem="aVd-nx-4DB" firstAttribute="leading" secondItem="Ykv-yQ-CXj" secondAttribute="leading" constant="15" id="LM8-42-ecZ"/>
                     <constraint firstItem="EWZ-4d-qxg" firstAttribute="leading" secondItem="Ykv-yQ-CXj" secondAttribute="trailing" constant="20" id="Qwk-76-rIN"/>
                     <constraint firstItem="EWZ-4d-qxg" firstAttribute="centerY" secondItem="Ykv-yQ-CXj" secondAttribute="centerY" id="Tbx-5C-Hqe"/>
                     <constraint firstItem="hVf-Mo-U66" firstAttribute="top" secondItem="EWZ-4d-qxg" secondAttribute="bottom" constant="5" id="VtW-29-Zan"/>
@@ -90,7 +91,6 @@
                     <constraint firstItem="aVd-nx-4DB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="XRJ-6Y-Z8Z"/>
                     <constraint firstItem="Ykv-yQ-CXj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="bOa-12-v5k"/>
                     <constraint firstItem="Ykv-yQ-CXj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="128" id="cGo-Oz-E2Y"/>
-                    <constraint firstItem="aVd-nx-4DB" firstAttribute="centerX" secondItem="Ykv-yQ-CXj" secondAttribute="centerX" id="ldB-x7-USn"/>
                     <constraint firstItem="RFH-sc-Vvu" firstAttribute="top" secondItem="8Gi-Pj-h6Y" secondAttribute="bottom" constant="8" id="rUm-Ih-wfr"/>
                     <constraint firstAttribute="bottom" secondItem="aVd-nx-4DB" secondAttribute="bottom" id="rk7-fJ-psn"/>
                     <constraint firstItem="8Gi-Pj-h6Y" firstAttribute="top" secondItem="mCy-ee-PlZ" secondAttribute="bottom" id="s38-MO-FZq"/>
