--- a/TipTap/Module/MyDiary/MyDiary.storyboard
+++ b/TipTap/Module/MyDiary/MyDiary.storyboard
@@ -19,20 +19,58 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3Nt-Zd-vKV">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="FL4-rM-RN3" id="5d6-ek-PQY"/>
                                     <outlet property="delegate" destination="FL4-rM-RN3" id="A8O-b3-IxJ"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7AZ-E3-QWO">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY DIARY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5SZ-6D-PVk">
+                                        <rect key="frame" x="154" y="27" width="66" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18`" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EN2-2i-MWJ">
+                                        <rect key="frame" x="177.5" y="46" width="20" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Szz-nc-w0P">
+                                        <rect key="frame" x="319" y="20" width="46" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="N8k-Gd-9oD"/>
+                                            <constraint firstAttribute="height" constant="40" id="S4J-zb-5Y3"/>
+                                        </constraints>
+                                        <state key="normal" image="delete"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="5SZ-6D-PVk" firstAttribute="top" secondItem="7AZ-E3-QWO" secondAttribute="top" constant="27" id="9Do-FO-jew"/>
+                                    <constraint firstItem="5SZ-6D-PVk" firstAttribute="centerX" secondItem="7AZ-E3-QWO" secondAttribute="centerX" id="DO2-iG-9gz"/>
+                                    <constraint firstAttribute="trailing" secondItem="Szz-nc-w0P" secondAttribute="trailing" constant="10" id="Jw4-8z-Q19"/>
+                                    <constraint firstAttribute="height" constant="80" id="OhL-vW-7R8"/>
+                                    <constraint firstItem="EN2-2i-MWJ" firstAttribute="top" secondItem="5SZ-6D-PVk" secondAttribute="bottom" constant="2" id="s6l-i7-427"/>
+                                    <constraint firstItem="Szz-nc-w0P" firstAttribute="centerY" secondItem="7AZ-E3-QWO" secondAttribute="centerY" id="zX1-Sk-sms"/>
+                                    <constraint firstItem="EN2-2i-MWJ" firstAttribute="centerX" secondItem="7AZ-E3-QWO" secondAttribute="centerX" id="zgI-cV-sgo"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="lIy-HB-YTX" firstAttribute="bottom" secondItem="3Nt-Zd-vKV" secondAttribute="bottom" id="6Fq-zf-l5N"/>
+                            <constraint firstItem="7AZ-E3-QWO" firstAttribute="trailing" secondItem="lIy-HB-YTX" secondAttribute="trailing" id="97P-LN-Xkf"/>
                             <constraint firstItem="lIy-HB-YTX" firstAttribute="trailing" secondItem="3Nt-Zd-vKV" secondAttribute="trailing" id="PWK-5l-5M9"/>
-                            <constraint firstItem="3Nt-Zd-vKV" firstAttribute="top" secondItem="lIy-HB-YTX" secondAttribute="top" id="Rag-zc-9ki"/>
+                            <constraint firstItem="3Nt-Zd-vKV" firstAttribute="top" secondItem="7AZ-E3-QWO" secondAttribute="bottom" id="VoV-Ss-Ovc"/>
                             <constraint firstItem="3Nt-Zd-vKV" firstAttribute="leading" secondItem="lIy-HB-YTX" secondAttribute="leading" id="XPb-36-uwN"/>
+                            <constraint firstItem="7AZ-E3-QWO" firstAttribute="leading" secondItem="lIy-HB-YTX" secondAttribute="leading" id="d2a-Yi-tZ6"/>
+                            <constraint firstItem="7AZ-E3-QWO" firstAttribute="top" secondItem="Pcd-0a-XUT" secondAttribute="top" id="eJJ-ag-nyj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lIy-HB-YTX"/>
                     </view>
@@ -45,4 +83,7 @@
             <point key="canvasLocation" x="40.799999999999997" y="100.29985007496252"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="delete" width="24" height="24"/>
+    </resources>
 </document>
