--- a/TipTap/Module/DetailDiary/View/TTDetailDiaryCell.xib
+++ b/TipTap/Module/DetailDiary/View/TTDetailDiaryCell.xib
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TTDetailImageCell" id="gTV-IL-0wX" customClass="TTDetailImageCell" customModule="TipTap" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TTDetailDiaryCell" id="gTV-IL-0wX" customClass="TTDetailDiaryCell" customModule="TipTap" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="296" height="352"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -25,16 +25,33 @@
                             <constraint firstAttribute="height" constant="250" id="NrJ-xe-NBu"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RGf-1y-rZc">
+                        <rect key="frame" x="55" y="0.0" width="186" height="352"/>
+                        <attributedString key="attributedText">
+                            <fragment content="Label">
+                                <attributes>
+                                    <font key="NSFont" metaFont="cellTitle"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <constraints>
                 <constraint firstItem="UNg-eh-ovY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CN6-Ta-zeN"/>
                 <constraint firstItem="UNg-eh-ovY" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="GPr-m7-xh3"/>
+                <constraint firstAttribute="trailing" secondItem="RGf-1y-rZc" secondAttribute="trailing" constant="55" id="Q3O-OD-BO8"/>
+                <constraint firstItem="RGf-1y-rZc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="55" id="d16-ec-tQW"/>
                 <constraint firstAttribute="trailing" secondItem="UNg-eh-ovY" secondAttribute="trailing" id="qnB-ZF-8We"/>
+                <constraint firstAttribute="bottom" secondItem="RGf-1y-rZc" secondAttribute="bottom" id="rFR-HE-Xhq"/>
+                <constraint firstItem="RGf-1y-rZc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="zww-HR-N8H"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="296" height="352"/>
             <connections>
+                <outlet property="diaryContentLabel" destination="RGf-1y-rZc" id="S2p-xi-a9v"/>
                 <outlet property="diaryImageView" destination="UNg-eh-ovY" id="DIx-sU-f8q"/>
             </connections>
             <point key="canvasLocation" x="157" y="205"/>
