--- a/TipTap/Module/MyDiary/Cell/TTMyDiaryCell.xib
+++ b/TipTap/Module/MyDiary/Cell/TTMyDiaryCell.xib
@@ -20,47 +20,47 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diaryCard" translatesAutoresizingMaskIntoConstraints="NO" id="Gka-i8-Y5C">
-                        <rect key="frame" x="104" y="0.0" width="271" height="157.5"/>
+                        <rect key="frame" x="104" y="7" width="271" height="150.5"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aug" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvX-gx-k8L">
-                        <rect key="frame" x="60" y="12" width="31" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="60" y="12" width="25.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="faf-T8-aAw">
-                        <rect key="frame" x="137" y="31" width="35" height="24"/>
+                        <rect key="frame" x="137" y="38" width="35" height="24"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                         <color key="textColor" red="0.47843137254901957" green="0.78431372549019607" blue="0.73725490196078436" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 TIPTAP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wdY-yu-iYn">
-                        <rect key="frame" x="219" y="31" width="57.5" height="14.5"/>
+                        <rect key="frame" x="219" y="38" width="57.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울특별시 망원동 키오스크" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdu-n6-Ehy">
-                        <rect key="frame" x="219" y="50.5" width="131.5" height="14.5"/>
+                        <rect key="frame" x="219" y="57.5" width="131.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울대입구역" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uk5-5f-XJ9">
-                        <rect key="frame" x="219" y="88" width="63" height="15"/>
+                        <rect key="frame" x="219" y="95" width="63" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uWa-Iu-fil">
-                        <rect key="frame" x="0.0" y="22" width="32" height="1"/>
+                        <rect key="frame" x="0.0" y="20" width="32" height="1"/>
                         <color key="backgroundColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="qah-kb-iAo"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dots" translatesAutoresizingMaskIntoConstraints="NO" id="4bn-Db-Qgf">
-                        <rect key="frame" x="219" y="73" width="1" height="7"/>
+                        <rect key="frame" x="219" y="80" width="1" height="7"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="1" id="VsC-1d-tie"/>
                             <constraint firstAttribute="height" constant="7" id="waf-cu-Dc7"/>
@@ -72,7 +72,7 @@
                     <constraint firstItem="dvX-gx-k8L" firstAttribute="leading" secondItem="uWa-Iu-fil" secondAttribute="trailing" constant="28" id="EM7-PZ-uUW"/>
                     <constraint firstItem="wdY-yu-iYn" firstAttribute="top" secondItem="faf-T8-aAw" secondAttribute="top" id="GER-tp-Fh8"/>
                     <constraint firstItem="4bn-Db-Qgf" firstAttribute="top" secondItem="fdu-n6-Ehy" secondAttribute="bottom" constant="8" id="Ifx-pE-DLy"/>
-                    <constraint firstItem="faf-T8-aAw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="31" id="M4c-Vq-NQl"/>
+                    <constraint firstItem="faf-T8-aAw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="38" id="M4c-Vq-NQl"/>
                     <constraint firstAttribute="trailing" secondItem="Gka-i8-Y5C" secondAttribute="trailing" id="NoI-M2-Cel"/>
                     <constraint firstItem="uk5-5f-XJ9" firstAttribute="top" secondItem="4bn-Db-Qgf" secondAttribute="bottom" constant="8" id="RV0-lI-9zZ"/>
                     <constraint firstItem="Gka-i8-Y5C" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="104" id="S97-x6-zCI"/>
@@ -85,7 +85,7 @@
                     <constraint firstItem="dvX-gx-k8L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="p5a-Bv-Hff"/>
                     <constraint firstItem="fdu-n6-Ehy" firstAttribute="leading" secondItem="wdY-yu-iYn" secondAttribute="leading" id="pNE-g6-7Fb"/>
                     <constraint firstItem="4bn-Db-Qgf" firstAttribute="leading" secondItem="fdu-n6-Ehy" secondAttribute="leading" id="u40-eN-u6c"/>
-                    <constraint firstItem="Gka-i8-Y5C" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="wwm-dD-Ttz"/>
+                    <constraint firstItem="Gka-i8-Y5C" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="wwm-dD-Ttz"/>
                     <constraint firstItem="uWa-Iu-fil" firstAttribute="centerY" secondItem="dvX-gx-k8L" secondAttribute="centerY" id="xzS-Le-AaQ"/>
                 </constraints>
             </tableViewCellContentView>
