정해현 [TipTap] - detect number of rows at Detail list

--- a/TipTap/Module/DetailDiary/DetailDiary.storyboard
+++ b/TipTap/Module/DetailDiary/DetailDiary.storyboard
@@ -118,6 +118,8 @@
                     <connections>
                         <outlet property="brandLabel" destination="sfE-rE-wvq" id="DkA-JX-ozx"/>
                         <outlet property="collectionView" destination="QU5-4M-fVS" id="XNY-TU-eQl"/>
+                        <outlet property="locationLabel" destination="0Nc-k3-dsm" id="t59-Xy-eum"/>
+                        <outlet property="titleLabel" destination="rjL-D3-yy8" id="5cd-Qb-efd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RXh-Eo-tyB" userLabel="First Responder" sceneMemberID="firstResponder"/>
