--- a/TipTap/Module/MyDiary/MyDiary.storyboard
+++ b/TipTap/Module/MyDiary/MyDiary.storyboard
@@ -47,7 +47,10 @@
                                             <constraint firstAttribute="width" constant="46" id="N8k-Gd-9oD"/>
                                             <constraint firstAttribute="height" constant="40" id="S4J-zb-5Y3"/>
                                         </constraints>
-                                        <state key="normal" image="delete"/>
+                                        <state key="normal" image="calendar"/>
+                                        <connections>
+                                            <action selector="pressedCalendar:" destination="FL4-rM-RN3" eventType="touchUpInside" id="ZqU-xX-StQ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
@@ -84,6 +87,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="delete" width="24" height="24"/>
+        <image name="calendar" width="24" height="24"/>
     </resources>
 </document>
